--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node --watch ./bin/www"
+    "dev": "node --watch server.js"
   },
   "dependencies": {
     "axios": "^1.4.0",
